--- a/index.html
+++ b/index.html
@@ -689,6 +689,11 @@
     </div>
 </footer>
 
+
+<button id="scrollToTop" class="fixed bottom-8 right-8 z-[60] w-12 h-12 bg-cyan-500 text-white rounded-xl shadow-2xl flex items-center justify-center translate-y-24 opacity-0 transition-all duration-500 hover:bg-blue-900 hover:-translate-y-1 active:scale-95 group">
+    <i data-lucide="arrow-up" class="w-6 h-6 group-hover:animate-bounce"></i>
+</button>
+
  <!-- script -->
 <script src="script.js"></script>
 </body>
