added the contact page

--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
                     Advocacy
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
+                <a href="contact.html" class="text-sm font-medium hover:text-cyan-400 transition-colors relative group">
+                    Contact
+                    <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
+                </a>
                 <button id="nav-btn" class="bg-cyan-500 hover:bg-cyan-400 text-white px-6 py-2.5 rounded-full text-sm font-semibold shadow-lg transition-all hover:-translate-y-0.5">
                     Join Us
                 </button>
@@ -682,9 +686,6 @@
                 <a href="#" class="text-[10px] text-blue-200/40 font-bold uppercase tracking-[0.2em] hover:text-cyan-400 transition-colors">Sitemap</a>
             </div>
 
-            <a href="#" class="hidden md:flex items-center gap-2 text-[10px] font-bold uppercase tracking-widest text-cyan-400 hover:text-white transition-colors">
-                Back to Top <i data-lucide="arrow-up" class="w-3 h-3"></i>
-            </a>
         </div>
     </div>
 </footer>
