--- a/about.html
+++ b/about.html
@@ -95,6 +95,10 @@
                     Advocacy
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
+                <a href="contact.html" class="text-sm font-medium hover:text-cyan-400 transition-colors relative group">
+                    Contact
+                    <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
+                </a>
                 <button id="nav-btn" class="bg-cyan-500 hover:bg-cyan-400 text-white px-6 py-2.5 rounded-full text-sm font-semibold shadow-lg transition-all hover:-translate-y-0.5">
                     Join Us
                 </button>
