minor changes in each page and added scroll up arrow

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - COAREA Coimbatore</title>
-    
+       <!--favicon-->
+    <link rel="icon" href="assets/favicon.PNG" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -230,6 +231,11 @@
             </div>
         </div>
     </footer>
+
+
+    <button id="scrollToTop" class="fixed bottom-8 right-8 z-[60] w-12 h-12 bg-cyan-500 text-white rounded-xl shadow-2xl flex items-center justify-center translate-y-24 opacity-0 transition-all duration-500 hover:bg-blue-900 hover:-translate-y-1 active:scale-95 group">
+    <i data-lucide="arrow-up" class="w-6 h-6 group-hover:animate-bounce"></i>
+    </button>
 
     <!-- Script-->
     <script>lucide.createIcons();</script>
