--- a/team.html
+++ b/team.html
@@ -167,9 +167,15 @@
     <!-- Footer -->
     <footer class="bg-white border-t border-slate-100 py-8">
         <div class="container mx-auto px-6 text-center">
-            <p class="text-sm text-slate-400">&copy; 2024 Coimbatore Association of Realtors.</p>
+            <p class="text-sm text-slate-400">&copy; 2026 Coimbatore Association of Realtors.</p>
         </div>
     </footer>
+
+     <!-- Scroll Up Arrow Button -->
+    <button id="scrollToTop" class="fixed bottom-8 right-8 z-[60] w-12 h-12 bg-cyan-500 text-white rounded-xl shadow-2xl flex items-center justify-center translate-y-24 opacity-0 transition-all duration-500 hover:bg-blue-900 hover:-translate-y-1 active:scale-95 group">
+    <i data-lucide="arrow-up" class="w-6 h-6 group-hover:animate-bounce"></i>
+    </button>
+
 
     <!-- Scripts -->
     <script>
