--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-slate-900 text-lg">Our Address</h4>
-                                    <p class="text-slate-500 mt-1 leading-relaxed">7th Floor, Chamber Towers, Avinashi Road,<br>Coimbatore - 641018</p>
+                                    <p class="text-slate-500 mt-1 leading-relaxed"> Coimbatore Realtors Associations <br>New No 5, First Floor, School Road, <br>Krishnasamy Nagar, Ramanathapuram, <br>Coimbatore - 641045, Tamil Nadu. India.</p>
                                 </div>
                             </div>
 
@@ -137,7 +137,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-slate-900 text-lg">Direct Contact</h4>
-                                    <p class="text-slate-500 mt-1 leading-relaxed">Office: +91 422 222 1234<br>Member Helpline: +91 98765 43210</p>
+                                    <p class="text-slate-500 mt-1 leading-relaxed">Office: +91 00000 00000<br>Member Helpline: +91 00000 00000</p>
                                 </div>
                             </div>
 
@@ -147,7 +147,7 @@
                                 </div>
                                 <div>
                                     <h4 class="font-bold text-slate-900 text-lg">Email Inquiries</h4>
-                                    <p class="text-slate-500 mt-1 leading-relaxed">info@coarea.in<br>admin@coarea.in</p>
+                                    <p class="text-slate-500 mt-1 leading-relaxed">secretary@coarea.in<br>president@coarea.in</p>
                                 </div>
                             </div>
                         </div>
@@ -211,7 +211,7 @@
                 
                 <div class="absolute top-6 left-6 bg-white/90 backdrop-blur-md p-4 rounded-2xl shadow-lg border border-slate-100 hidden md:block">
                     <p class="text-[10px] font-black text-cyan-600 uppercase tracking-[0.2em] mb-1">Visit Our Office</p>
-                    <p class="text-sm font-bold text-blue-900 leading-tight">Chamber Towers, Avinashi Road</p>
+                    <p class="text-sm font-bold text-blue-900 leading-tight">Coimbatore, Tamil Nadu</p>
                 </div>
             </div>
         </div>
