--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     Empowering real estate professionals through ethics, education, and advocacy. We set the standard for trust in the industry.
                 </p>
 
-                <div class="bg-white/95 backdrop-blur-sm p-3 rounded-2xl shadow-2xl shadow-blue-900/30 max-w-3xl mx-auto border border-slate-100 flex flex-col md:flex-row gap-2 relative z-20">
+              <!-- <div class="bg-white/95 backdrop-blur-sm p-3 rounded-2xl shadow-2xl shadow-blue-900/30 max-w-3xl mx-auto border border-slate-100 flex flex-col md:flex-row gap-2 relative z-20">
                     <div class="flex-1 flex items-center px-4 py-3 bg-slate-50 rounded-xl hover:bg-slate-100 transition-colors">
                         <i data-lucide="map-pin" class="text-cyan-500 mr-3 w-5 h-5"></i>
                         <input type="text" placeholder="Find a Realtor by Area..." class="bg-transparent w-full text-slate-700 placeholder-slate-400 font-medium focus:outline-none">
@@ -164,7 +164,7 @@
                         <i data-lucide="search" class="w-5 h-5"></i>
                         <span>Verify</span>
                     </button>
-                </div>
+                </div>--> 
 
                 <div class="mt-12 flex flex-wrap justify-center gap-8 text-sm font-bold text-white">
                     <div class="flex items-center gap-2 bg-white/10 px-4 py-2 rounded-full border border-white/20 shadow-sm backdrop-blur-md">
@@ -649,14 +649,14 @@
                                 <i data-lucide="map-pin" class="w-4 h-4 text-white"></i>
                             </div>
                             <p class="text-blue-100/70 text-sm leading-relaxed">
-                                Chamber Towers, 7th Floor,<br> Avinashi Road, Coimbatore - 641018
+                                 Coimbatore Realtors Associations <br>New No 5, First Floor, School Road, <br>Krishnasamy Nagar, Ramanathapuram, <br>Coimbatore - 641045, Tamil Nadu. India.
                             </p>
                         </div>
                         <div class="flex items-center gap-4 group">
                             <div class="w-10 h-10 rounded-xl bg-white/5 flex items-center justify-center group-hover:bg-cyan-500 transition-colors duration-500">
                                 <i data-lucide="phone" class="w-4 h-4 text-white"></i>
                             </div>
-                            <p class="text-blue-100/70 text-sm">+91 422 222 1234</p>
+                            <p class="text-blue-100/70 text-sm">+91 00000 00000</p>
                         </div>
                     </div>
                 </div>
