added advocacy & benefits

--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,11 @@
                     Members
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#benefits" class="text-sm font-medium hover:text-cyan-400 transition-colors relative group">
+                <a href="benefits.html" class="text-sm font-medium hover:text-cyan-400 transition-colors relative group">
                     Benefits
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
-                <a href="#advocacy" class="text-sm font-medium hover:text-cyan-400 transition-colors relative group">
+                <a href="advocacy.html" class="text-sm font-medium hover:text-cyan-400 transition-colors relative group">
                     Advocacy
                     <span class="absolute -bottom-1 left-0 w-0 h-0.5 bg-cyan-400 transition-all duration-300 group-hover:w-full"></span>
                 </a>
