--- a/index.html
+++ b/index.html
@@ -231,49 +231,56 @@
     </section>
 
     <!-- Impact Section -->
-    <section class="bg-white border-b border-slate-100 relative z-10">
-        <div class="container mx-auto px-6 py-8">
-            <div class="flex items-center justify-between mb-6">
-                <h3 class="text-lg font-bold text-slate-800 flex items-center gap-2">
-                    <i data-lucide="award" class="text-cyan-500 w-5 h-5"></i>
-                    Our Impact
-                </h3>
-                <a href="#" class="text-sm text-blue-600 font-semibold hover:text-blue-800 flex items-center gap-1">
-                    View Annual Report <i data-lucide="arrow-right" class="w-4 h-4"></i>
+<section class="bg-slate-900 py-16 relative overflow-hidden">
+    <div class="absolute top-0 left-0 w-full h-full opacity-10 pointer-events-none">
+        <svg class="w-full h-full" viewBox="0 0 100 100" preserveAspectRatio="none">
+            <path d="M0 100 L100 0" stroke="white" stroke-width="0.5"/>
+        </svg>
+    </div>
+
+    <div class="container mx-auto px-6">
+        <div class="flex flex-col lg:flex-row items-center justify-between gap-12">
+            
+            <div class="lg:w-1/3 text-center lg:text-left">
+                <div class="flex items-center justify-center lg:justify-start gap-3 mb-4">
+                    <span class="h-px w-8 bg-cyan-500"></span>
+                    <p class="text-cyan-400 font-bold text-[10px] uppercase tracking-[0.4em]">Our Impact</p>
+                </div>
+                <h2 class="text-3xl lg:text-4xl font-extrabold text-white leading-tight">
+                    Quantifying <br/> <span class="text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-400">Excellence.</span>
+                </h2>
+                <a href="#" class="inline-flex items-center gap-2 mt-8 text-xs font-bold text-blue-200 hover:text-cyan-400 transition-colors uppercase tracking-widest">
+                    Annual Report 2026 <i data-lucide="external-link" class="w-3 h-3"></i>
                 </a>
             </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                <div class="p-4 rounded-xl bg-slate-50 border border-slate-100 hover:shadow-md transition-all">
-                    <p class="text-xs text-slate-500 font-medium uppercase tracking-wide mb-1">Disputes Resolved</p>
-                    <div class="flex flex-col">
-                        <div class="text-2xl font-bold text-slate-900">1,200+</div>
-                        <div class="text-xs font-medium text-cyan-600 mt-1">Through Arbitration</div>
+
+            <div class="lg:w-2/3 w-full">
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-0 border border-white/10 rounded-[2rem] overflow-hidden backdrop-blur-sm bg-white/5">
+                    
+                    <div class="p-10 border-b md:border-b-0 md:border-r border-white/10 hover:bg-white/5 transition-colors group">
+                        <div class="text-4xl font-black text-white mb-2 tracking-tighter group-hover:text-cyan-400 transition-colors">1,200+</div>
+                        <p class="text-[10px] font-bold text-blue-200 uppercase tracking-widest mb-4">Disputes Resolved</p>
+                        <p class="text-xs text-blue-100/40 leading-relaxed font-light">Efficient arbitration ensuring fair outcomes for all parties involved.</p>
                     </div>
-                </div>
-                <div class="p-4 rounded-xl bg-slate-50 border border-slate-100 hover:shadow-md transition-all">
-                    <p class="text-xs text-slate-500 font-medium uppercase tracking-wide mb-1">Training Sessions</p>
-                    <div class="flex flex-col">
-                        <div class="text-2xl font-bold text-slate-900">150+</div>
-                        <div class="text-xs font-medium text-cyan-600 mt-1">Skill Development</div>
+
+                    <div class="p-10 border-b md:border-b-0 md:border-r border-white/10 hover:bg-white/5 transition-colors group">
+                        <div class="text-4xl font-black text-white mb-2 tracking-tighter group-hover:text-cyan-400 transition-colors">500+</div>
+                        <p class="text-[10px] font-bold text-blue-200 uppercase tracking-widest mb-4">Active Members</p>
+                        <p class="text-xs text-blue-100/40 leading-relaxed font-light">A verified network of professionals across the Coimbatore region.</p>
                     </div>
-                </div>
-                <div class="p-4 rounded-xl bg-slate-50 border border-slate-100 hover:shadow-md transition-all">
-                    <p class="text-xs text-slate-500 font-medium uppercase tracking-wide mb-1">Active Members</p>
-                    <div class="flex flex-col">
-                        <div class="text-2xl font-bold text-slate-900">500+</div>
-                        <div class="text-xs font-medium text-cyan-600 mt-1">Across Coimbatore</div>
+
+                    <div class="p-10 hover:bg-white/5 transition-colors group">
+                        <div class="text-4xl font-black text-white mb-2 tracking-tighter group-hover:text-cyan-400 transition-colors">75+</div>
+                        <p class="text-[10px] font-bold text-blue-200 uppercase tracking-widest mb-4">Events Hosted</p>
+                        <p class="text-xs text-blue-100/40 leading-relaxed font-light">High-impact networking meets and B2B property expos.</p>
                     </div>
-                </div>
-                <div class="p-4 rounded-xl bg-slate-50 border border-slate-100 hover:shadow-md transition-all">
-                    <p class="text-xs text-slate-500 font-medium uppercase tracking-wide mb-1">Events Hosted</p>
-                    <div class="flex flex-col">
-                        <div class="text-2xl font-bold text-slate-900">75+</div>
-                        <div class="text-xs font-medium text-cyan-600 mt-1">Networking & Expos</div>
-                    </div>
+
                 </div>
             </div>
+
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- About Us Section -->
     <section id="about-us" class="py-20 bg-white">
@@ -290,7 +297,7 @@
                             </div>
                             <div>
                                 <p class="text-xs text-slate-500 uppercase font-bold tracking-wider">Est. Since</p>
-                                <p class="text-xl font-bold text-slate-900">1998</p>
+                                <p class="text-xl font-bold text-slate-900">2011</p>
                             </div>
                         </div>
                     </div>
