updated mobile view menu

--- a/about.html
+++ b/about.html
@@ -112,11 +112,12 @@
 
         <!-- Mobile Dropdown Menu -->
         <div id="mobile-menu" class="hidden absolute top-full left-0 w-full bg-white text-slate-700 border-t border-slate-100 p-6 shadow-xl flex-col gap-4">
-            <a href="#about-us" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">About Us</a>
-            <a href="#membership" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Membership</a>
-            <a href="#benefits" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Benefits</a>
-            <a href="#advocacy" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Advocacy</a>
-            <button class="bg-cyan-500 text-white w-full py-3 rounded-lg font-bold mt-4">Member Login</button>
+            <a href="about.html" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">About Us</a>
+            <a href="team.html" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Membership</a>
+            <a href="benefits.html" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Benefits</a>
+            <a href="advocacy.html" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Advocacy</a>
+            <a href="contact.html" class="text-lg font-semibold hover:text-cyan-600 pl-2 border-l-4 border-transparent hover:border-cyan-400">Contact</a>
+            <button class="bg-cyan-500 text-white w-full py-3 rounded-lg font-bold mt-4">Join Us</button>
         </div>
     </nav>
 
@@ -133,7 +134,7 @@
             <div class="flex items-start">
                 <div class="hidden lg:block h-full mr-12 pt-4">
                     <p class="text-gold-500 font-bold uppercase tracking-[1em] rotate-180 [writing-mode:vertical-lr] text-[10px] opacity-60">
-                        SINCE NINETEEN NINETY EIGHT
+                        SINCE TWO THOUSAND ELEVEN
                     </p>
                 </div>
                 
