--- a/team.html
+++ b/team.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team - COAREA</title>
     
+    <!--favicon-->
+    <link rel="icon" href="assets/favicon.PNG" type="image/x-icon">
+
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
